# clean

./: .gitignore  CHANGELOG.md  clean.cabal  flake.nix  hie.yaml
src/Domain/: ReservationDomain.hs
test/: DomainSpec.hs  Main.hs
