cabal-version:      3.0
name:               clean
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Justin Kian Romeon
maintainer:         justin.romeon@tontine.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common polysemy-settings
    build-depends:
        polysemy ^>=1.9.2.0,
        polysemy-plugin
    ghc-options:
        -O2
        -flate-specialise
        -fspecialise-aggressively
        -fplugin=Polysemy.Plugin
    default-extensions:
        DataKinds
        FlexibleContexts
        GADTs
        LambdaCase
        PolyKinds
        RankNTypes
        ScopedTypeVariables
        TypeApplications
        TypeOperators
        TypeFamilies

library
    import:           warnings, polysemy-settings
    exposed-modules:  Domain.ReservationDomain
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0,
                      containers,
                      time
    hs-source-dirs:   src
    default-language: Haskell2010

executable clean
    import:           warnings, polysemy-settings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.2.0,
        clean

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite clean-test
    import:           warnings, polysemy-settings
    default-language: Haskell2010
    other-modules:    DomainSpec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        clean,
        hspec,
        time
